spacing fix on mobile

--- a/src/app/modules/navbar/navbar.component.scss
+++ b/src/app/modules/navbar/navbar.component.scss
@@ -56,7 +56,10 @@
     
     max-width: 980px;
     margin: 0 auto;
-    padding: .5rem 2rem;
+    padding: .2rem;
+    @media(min-width: 600px) {
+      padding: .5rem 2rem;
+    }
   }
   &__item-list {
     display:flex;
